--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 #header {
   position: fixed;
   top: 0;
@@ -8,6 +12,7 @@
 
 #content {
   height: 100%;
+  min-height: calc(100dvh - 75px - 50px);
   overflow-y: auto;
   padding-top: 75px;
   padding-bottom: 50px;
