--- a/style.css
+++ b/style.css
@@ -2,26 +2,26 @@ body {
   margin: 0;
 }
 
+#container {
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
+}
+
 #header {
-  position: fixed;
-  top: 0;
   height: 75px;
   background-color: pink;
   width: 100%;
 }
 
 #content {
+  flex: 1;
   height: 100%;
-  min-height: calc(100dvh - 75px - 50px);
   overflow-y: auto;
-  padding-top: 75px;
-  padding-bottom: 50px;
   background-color: antiquewhite;
 }
 
 #footer {
-  position: fixed;
-  bottom: 0;
   height: 50px;
   background-color: cornflowerblue;
   width: 100%;
